<resources>
    <string name="app_name">Calculadora divisas</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>
    <string name="ce">CE</string>
    <string name="flecha">DEL</string>
    <string name="usdtoeur">$ to €</string>
    <string name="eurtousd">€ to $</string>
    <string name="change">Cambio de moneda</string>
    <string name="cantidad">Cantidad a calcular</string>
    <string name="inicial">0</string>
    <string name="dot">.</string>
</resources>
