<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/cantidad"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pantalla1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/inicial"
            android:textAlignment="textEnd"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/change"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pantalla2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/inicial"
            android:textAlignment="textEnd"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:checkedButton="@+id/radioButton"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/usdtoeur" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eurtousd" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n1"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n2"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n3"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n4"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n5"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n6"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n7"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n8"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n9"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b10"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/dot"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b11"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/n0"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/b12"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/ce"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>